[project]
name = "mcp-server-sqlexpress"
version = "0.1.0"
description = "A Microsoft SQL Server (SQLEXPRESS) MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyodbc>=5.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server_sqlexpress"]

[project.scripts]
mcp-server-sqlexpress = "mcp_server_sqlexpress:main"